--- a/RepoTools/RepoTools.csproj
+++ b/RepoTools/RepoTools.csproj
@@ -6,6 +6,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
+    <StartupObject>RepoTools.App</StartupObject>
   </PropertyGroup>
 
 </Project>
