--- a/RepoTools/RepoTools.csproj
+++ b/RepoTools/RepoTools.csproj
@@ -8,6 +8,8 @@
     <UseWPF>true</UseWPF>
     <StartupObject>RepoTools.App</StartupObject>
     <ApplicationIcon>tortoise_rg.ico</ApplicationIcon>
+    <FileVersion>1.0.0.0</FileVersion>
+	<Copyright>©2024 Georg@Dataport </Copyright>
   </PropertyGroup>
 
   <ItemGroup>
